@@ -21,6 +21,7 @@
 * LocalRandomMapping3D now supports optional random rotation step parameter (issue #528)
 * Introduced the concept of Scene texture image maps resize policy and the support for NONE and FIXED policies
 * Reworked the way alpha channel is computed for transmitted paths
+* Introduced the MINMEM Scene texture image maps resize policy
 
 ### Fixed Bugs
 
